--- a/render.yaml
+++ b/render.yaml
@@ -22,3 +22,5 @@ services:
         value: 2
       - key: DJANGO_SUPERUSER_PASSWORD
         generateValue: true
+      - key: PYTHON_VERSION
+        value: 3.8.7
