Change app name

--- a/render.yaml
+++ b/render.yaml
@@ -10,7 +10,7 @@ services:
     plan: free
     env: python
     buildCommand: "./build.sh"
-    startCommand: "gunicorn rest_api.wsgi:application"
+    startCommand: "gunicorn certification_sharing.wsgi:application"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
